--- a/paginas/entrevistas.html
+++ b/paginas/entrevistas.html
@@ -61,14 +61,21 @@
       </div>
     </div>
   </nav>
-  <article class="nota__toscano">
-    <img class="foto__toscano" src="../imagenes/pablo-toscano-web-2-da-vinci.jpg" alt="fotoPabloToscano">
-    <h1> Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada</h1>
-    <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la compañía Frima
-      Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
-      más importantes del 2018, el Assassin’s Creed Odyssey. </p>
-  </article>
-
+  <a href="./paginas/entrevista-toscano.html" class="animate__animated animate__fadeIn  wow">
+    <div class="card nota__toscano">
+      <div class="card-img-overlay">
+        <div class="card-text">
+          <h1>Pablo Toscano, director técnico de animación de uno de los juegos más importantes de la década pasada
+          </h1>
+          <p>Pablo Toscano se fue de Argentina en 2003 hacia Quebec, donde comenzó a trabajar en la
+            compañía Frima
+            Studios. Posteriormente, se unió al grupo de trabajo de Ubisoft Quebec, donde desarrolló uno de los juegos
+            más importantes del 2018, el Assassin’s Creed Odyssey.
+          </p>
+        </div>
+      </div>
+    </div>
+  </a>
   <div>
     <a href="https://wa.me/541164496877" target="blank"><img id="whatsapp" src="../imagenes/iconos/iconowhatsapp.png"
         alt="IconoWhatsapp"></a>
